Добавил csv и скриншот в отчет allire (teardown)

--- a/main/pytest.ini
+++ b/main/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = -v -s --alluredir=../results
+;addopts = -v -s --alluredir=../results --clean-alluredir
+addopts = -v -s --alluredir=../../results
 log_date_format = %H:%M:%S
 
 log_cli = true
