--- a/main/pytest.ini
+++ b/main/pytest.ini
@@ -1,6 +1,5 @@
 [pytest]
-;addopts = -v -s --alluredir=../results --clean-alluredir
-addopts = -v -s --alluredir=../../results
+addopts = -v -s --alluredir=../results --clean-alluredir
 log_date_format = %H:%M:%S
 
 log_cli = true
